# geoai-airbnb

./: .gitignore  GeoAI_Airbnb_Intelligence_Platform.md  NEXT_SESSION.md  PLAN.md  README.md  generate.py  project_specs.md  pyproject.toml  query_listings.py
.claude/: settings.json
app/: package-lock.json  package.json
app/src/: App.jsx  main.jsx
app/src/api/: client.js
app/src/components/: AnalyticsSidebar.jsx  HexDetail.jsx  KpiBar.jsx  LayerControls.jsx  ListingDetail.jsx  MapView.jsx
app/src/styles/: app.css
docs/adr/: 000-index.md  001-duckdb-as-warehouse.md  002-polars-over-pandas.md  003-h3-for-grid-aggregation.md  004-haversine-over-postgis.md  005-lightgbm-for-ml-models.md  006-fastapi-for-api-layer.md  007-analytics-narratives-frontend.md
prototype/: frontend_prototype.html
scripts/: audit_amenity_rates.py  compute_features.py  ingest_porto.py
src/geoai/: config.py
src/geoai/api/: deps.py  main.py  (+1 more)
tests/: test_accessibility.py  test_airbnb_ingestion.py  test_api_explain.py  test_api_health.py  test_api_hex.py  test_api_kpis.py  test_api_listings.py  test_api_opportunities.py  test_calendar_ingestion.py  test_competition.py  test_config.py  test_feature_matrix.py  test_h3_grid.py  test_occupancy.py  test_occupancy_model.py  test_osm_ingestion.py  test_poi_density.py  test_price_model.py  test_revenue_model.py  test_shap_explainer.py  test_walkability.py  test_warehouse.py
tests/api/: conftest.py  test_hex_listings.py  test_hexagons.py  test_listings.py  test_neighbourhoods.py  test_shap.py  test_stats.py
tests/models/: test_predict.py
(+34 files in other folders)
