[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoai-airbnb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "osmnx>=1.9.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "h3>=4.0.0",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "shap>=0.46.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geoai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
